Refactoring and added bulma card

--- a/reflex-bulma.cabal
+++ b/reflex-bulma.cabal
@@ -26,3 +26,5 @@ library
   exposed-modules:     Reflex.Bulma
   other-modules:       Reflex.Bulma.Elements
                      , Reflex.Bulma.Grid
+                     , Reflex.Bulma.Components
+
