--- a/reflex-bulma.cabal
+++ b/reflex-bulma.cabal
@@ -15,14 +15,14 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
-                     , containers
-                     , text
-                     , lens
-                     , reflex
-                     , reflex-dom
-                     , reflex-dom-contrib
-                     , font-awesome-type
+  build-depends:       base               >= 4.7 && < 5
+                     , containers         == 0.5.*
+                     , text               == 1.2.*
+                     , lens               == 4.15.*
+                     , reflex             == 0.5.*
+                     , reflex-dom         == 0.4.*
+                     , reflex-dom-contrib == 0.5.*
+                     , font-awesome-type  == 0.1.*
   exposed-modules:     Reflex.Bulma
   other-modules:       Reflex.Bulma.Elements
                      , Reflex.Bulma.Grid
